v4.2 — bugfixes: remove TabListFilterMixin conflict, fix profile mutation, VarHandle, thread safety, memory leaks