@@ -4,8 +4,9 @@ import com.mojang.authlib.GameProfile;
 import net.minecraft.world.entity.player.Player;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.gen.Accessor;
-import sun.misc.Unsafe;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.lang.reflect.Field;
 
 @Mixin(Player.class)
@@ -13,16 +14,20 @@ public interface PlayerEntityAccessor {
     @Accessor("gameProfile")
     GameProfile getGameProfile();
 
+    /**
+     * Set the gameProfile field on a Player instance.
+     * Uses VarHandle (Java 9+) which works reliably with final fields in Java 21+,
+     * unlike sun.misc.Unsafe which requires extra --add-opens and may be restricted.
+     */
     static void setGameProfile(Player player, GameProfile profile) {
         try {
             Field f = Player.class.getDeclaredField("gameProfile");
-            Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
-            unsafeField.setAccessible(true);
-            Unsafe unsafe = (Unsafe) unsafeField.get(null);
-            long offset = unsafe.objectFieldOffset(f);
-            unsafe.getAndSetObject(player, offset, profile);
+            f.setAccessible(true);
+            MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(Player.class, MethodHandles.lookup());
+            VarHandle handle = lookup.findVarHandle(Player.class, "gameProfile", GameProfile.class);
+            handle.set(player, profile);
         } catch (Exception e) {
-            throw new RuntimeException("Cannot set gameProfile on Player via Unsafe", e);
+            throw new RuntimeException("Cannot set gameProfile on Player via VarHandle", e);
         }
     }
 }
